# rig-ai-agent-blueprint

./: Cargo.toml  Dockerfile  README.md  build.rs
contracts/src/: HelloBlueprint.sol
src/: lib.rs  main.rs  tests.rs
src/jobs/: crud.rs  mod.rs
src/jobs/github/: file_processor.rs  mod.rs  processor.rs  types.rs
src/jobs/github/prompts/: general_docs.txt  go_docs.txt  python_docs.txt  rust_docs.txt  typescript_docs.txt
